# FreeTheEnd

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  STATUS.md  conftest.py  consolidation_manifest.json  pyproject.toml
.contextstream/: config.json
.github/: copilot-instructions.md
benchmarks/: __init__.py  benchmark_speedrun.py
configs/: ax_sweep_config.yaml  default.yaml  sweep_config.yaml
cpp/: CMakeLists.txt  compile_shaders.sh  mc189.pc.in
cpp/.cache/clangd/index/: action_decoder.cpp.3058AE733C4857F8.idx  action_decoder.h.08D8547C6FB2E633.idx  buffer_manager.cpp.37ADE05FA69C3EF3.idx  buffer_manager.cpp.EB0DE5D568EB3471.idx  buffer_manager.h.DB4506A05E469FDE.idx  buffer_manager.h.E472652F9027E178.idx  compute_example.cpp.7B0CDC631F2C9A39.idx  compute_example.cpp.C453321DE901AC74.idx  compute_pipeline.cpp.16697786F9639D3D.idx  compute_pipeline.cpp.7D7BE9EB5CD572BF.idx  compute_pipeline.h.8732BD580D106A3A.idx  compute_pipeline.h.AC6939598BC26D56.idx  crafting.cpp.2206E7867A0828C1.idx  crafting.h.019B492DDF25F895.idx  dimension.cpp.5F0E288EB887CF23.idx  dimension.h.67BA8B08C442F0D7.idx  fortress_location.cpp.6F874B3460E6A468.idx  fortress_location.cpp.AC02A6FD801972E7.idx  game_stage.h.F75262D2A0626D7A.idx  inventory.h.837E30DA48368D93.idx  items.h.707063DD60738459.idx  mc189_module.cpp.2D4AEEDFC4E0B36F.idx  mc189_module.cpp.45296B9282DC7D92.idx  mc189_simulator.cpp.5A1BE9C35DBC5F40.idx  mc189_simulator.cpp.D802D6B6CC312229.idx  mob_ai.cpp.F38311004FBBE405.idx  mob_ai.h.049BC5353F67F322.idx  multistage_simulator.cpp.9BC7873503DC86B4.idx  multistage_simulator.h.67B66D6534DD63E9.idx  observation_encoder.cpp.267B9DA32204DB4E.idx  observation_encoder.h.CDDCDCFF82113496.idx  observation_encoder.h.F1769CFE2E226DAD.idx  portal_manager.cpp.96B88802484879CC.idx  portal_manager.h.AC5B41B4898DAF17.idx  py_buffer_manager.cpp.0F0EB76FD98FDCBA.idx  py_buffer_manager.cpp.253097EA260488A2.idx  py_compute_pipeline.cpp.D22091653B3BE5DC.idx  py_compute_pipeline.cpp.ECCFB06EE38F6C1D.idx  py_simulator.cpp.471D6F765B6A5E57.idx  py_simulator.cpp.A91955F04A013B07.idx  (+20 more)
cpp/build_cpu/: CMakeCache.txt
cpp/cmake/: pybind11.cmake
cpp/examples/: compute_example.cpp
cpp/include/: minecraft_sim.hpp
cpp/include/mc189/: async_transfer.h  blocks.h  buffer_manager.h  command_recorder.h  compute_pipeline.h  cpu_backend.h  crafting.h  device.h  dimension.h  entity_manager.h  fortress_location.h  game_stage.h  instance.h  inventory.h  items.h  mob_ai.h  multistage_simulator.h  observation_encoder.h  portal_manager.h  resource_detection.h  reward_computer.h  shader_loader.h  simulator.h  simulator_api.h  spawn_selection.h  sync_primitives.h  terrain_generator.h  vulkan_context.h  world_seed.h
cpp/shaders/: aabb_ops.comp  aabb_ops.spv  action_decoder.comp  action_decoder.spv  batch_actions.comp  batch_actions.spv  batch_reset.comp  batch_reset.spv  batch_step.comp  batch_step.spv  bed_explosion.comp  bed_explosion.spv  biome_gen.comp  biome_gen.spv  block_breaking.comp  block_breaking.spv  block_breaking_full.comp  block_breaking_full.spv  block_placing.comp  block_placing.spv  block_updates.comp  block_updates.spv  cave_generation.comp  cave_generation.spv  comp.spv  crafting.comp  crafting.spv  crafting_recipes.glsl  crystal_combat.comp  crystal_combat.spv  crystal_tick.comp  crystal_tick.spv  damage.glsl  decoration.comp  decoration.spv  dimension_teleport.comp  dimension_teleport.spv  dragon_ai.comp  dragon_ai.spv  dragon_ai_full.comp  (+128 more)
cpp/src/: action_decoder.cpp  action_decoder.h  async_transfer.cpp  buffer_manager.cpp  chunk_cache.cpp  chunk_cache.h  compute_pipeline.cpp  cpu_backend.cpp  crafting.cpp  dimension.cpp  dragon_simulator.cpp  fortress_location.cpp  mc189_simulator.cpp  mob_ai.cpp  multistage_simulator.cpp  observation_encoder.cpp  observation_encoder.h  portal_manager.cpp  resource_detection.cpp  reward_computer.cpp  simulator.cpp  simulator.h  spawn_selection.cpp  vulkan_context.cpp  world_seed.cpp  world_seed_impl.cpp
cpp/src/benchmark/: shader_profiler.cpp  throughput_bench.cpp
cpp/src/bindings/: mc189_module.cpp  py_buffer_manager.cpp  py_compute_pipeline.cpp  py_simulator.cpp  py_vulkan_context.cpp
cpp/src/python/: bindings.cpp  gym_wrapper.cpp
cpp/src/vulkan/: buffer_manager.cpp  command_recorder.cpp  descriptor_layouts.h  device.cpp  device.h  instance.cpp  instance.h  shader_loader.cpp  sync_primitives.cpp
cpp/tests/: benchmark_backend.cpp  test_backend_integration.cpp  test_multistage.cpp  test_vulkan.cpp
docs/: ARCHITECTURE.md  DEVELOPER.md  api.md  architecture.md  developer.md  hyperparameter_optimization.md  index.md  physics_audit.md  physics_reference.md  shader_reference.md  training_guide.md  troubleshooting.md  tutorial_advanced_training.md  tutorial_full_speedrun.md
examples/: benchmark_backends.py  benchmark_stages.py  evaluate.py  evaluate_speedrun.py  free_the_end.py  quick_run.py  run_ax_sweep.py  train_ppo.py  train_ppo_smoke.py  train_ppo_speedrun.py  train_speedrun.py  visualize_run.py
oracle/: __init__.py  combat_test_cases.json  mc189_constants.py  mc189_physics.py
scripts/: add_minecraft_tasks.py  check_hardcoded_dims.py  consolidate_minecraft.py  run_backend_tests.py
tasks/: completion.yaml  phase4_stage_validation.yaml  phase5_cpu_backend.yaml
tests/: __init__.py  test_actions.py  test_attack_cooldown.py  test_backend_integration.py  test_constants.py  test_cpu_backend.py  test_curriculum.py  test_decode_flat_observation.py  test_determinism.py  test_discrete_actions.py  test_fallback.py  test_full_speedrun.py  test_gpu_simulation.py  test_matrix.py  test_mechanics.py  test_progression.py  test_shaders.py  test_simulator.py  test_smoke.py  test_stage1_survival.py  test_stage2_resources.py  test_stage3_nether.py  test_stage3_vec_reward.py  test_stage4_enderman.py  test_stage4_stronghold.py  test_stage4_vector_portal_rewards.py  test_stage5_stronghold.py  test_stage6_dragon_enhanced.py  test_verifiers.py
training/: evaluate_stage1.py  train_stage1.py
verification/: __init__.py  aabb_verifier.py  (+26 more)
(+62 files in other folders)
