[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-sim"
version = "0.1.0"
description = "GPU-accelerated Minecraft 1.8.9 dragon fight simulator for RL"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24.0"]

[project.optional-dependencies]
training = ["torch>=2.0.0", "gymnasium>=0.29.0"]
tuning = ["ax-platform>=0.4.0", "botorch>=0.11.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = ["minecraft-sim[training,tuning,dev]"]

[project.urls]
Homepage = "https://github.com/RESMP-DEV/AlphaHENG"
Repository = "https://github.com/RESMP-DEV/AlphaHENG"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
"*" = ["*.comp", "*.h", "*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # function call in default argument
    "B905", # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["minecraft_sim"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU/Vulkan",
    "oracle: marks tests that use MC oracle for validation",
]
addopts = "-v --tb=short"
